@@ -44,6 +44,7 @@
 #include <linux/list.h>
 #include <linux/timer.h>
 #include <linux/wait.h>
+#include <linux/kthread.h>
 #include <asm/semaphore.h>
 
 #include "device.h"
@@ -134,15 +135,7 @@ struct ec_master {
     unsigned int frames_timed_out; /**< There were frame timeouts in the last
                                      call to ecrt_master_receive(). */
 
-    int thread_id; /**< Master thread PID. */
-    struct completion thread_can_terminate; /**< Thread termination completion
-                                              object. When stopping the
-                                              thread, it must be assured, that
-                                              it 'hears' a SIGTERM, therefore
-                                              the allow_singal() function must
-                                              have been called.
-                                             */
-    struct completion thread_exit; /**< Thread completion object. */
+    struct task_struct *thread; /**< Master thread. */
 
 #ifdef EC_EOE
     struct timer_list eoe_timer; /**< EoE timer object. */
