@@ -6,6 +6,7 @@ $Id$
 
 Changes since 1.4.0-rc2:
 
+* Ported the master thread to the kthread interface.
 * Added missing semaphore up() in an ioctl(). In rare cases, the master
   semaphore was not released.
 * Minor fix in 'slaves' command that fixed duplicate display of supported
